{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 49,
  "lineage": "f6a7267b-7761-baf6-e7b0-fb2750d1770e",
  "resources": [
    {
      "module": "module.apigw",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:security-group/sg-0518033fb49f4e292",
            "description": "SG for API Gateway VPC Link ENIs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0518033fb49f4e292",
            "ingress": [],
            "name": "web-api-apigw-vpc-link-sg",
            "name_prefix": "",
            "owner_id": "769126752719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-api-apigw-vpc-link-sg"
            },
            "tags_all": {
              "Name": "web-api-apigw-vpc-link-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a19bcec6d2ec60fb",
            "arn": "arn:aws:ec2:us-east-1:769126752719:instance/i-055f267cce462ac27",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web-api-ec2-profile",
            "id": "i-055f267cce462ac27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-004956f58a90c86a3",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0152798722cbf4006",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a323bbf138cdabb3",
            "tags": {
              "App": "web-api",
              "Name": "web-api-ec2"
            },
            "tags_all": {
              "App": "web-api",
              "Name": "web-api-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe944a9ae6d45bdb"
            ]
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2",
            "module.ec2.aws_iam_role.ec2",
            "module.ec2.aws_security_group.ec2",
            "module.ec2.data.aws_ami.al2023",
            "module.ec2.data.aws_iam_policy_document.assume",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:security-group/sg-0fe944a9ae6d45bdb",
            "description": "Allow HTTP from VPC (NLB traffic) and all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe944a9ae6d45bdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-api-ec2-sg",
            "name_prefix": "",
            "owner_id": "769126752719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-api-ec2-sg"
            },
            "tags_all": {
              "Name": "web-api-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:769126752719:loadbalancer/net/web-api-nlb/04dc7d5cfa7910a3",
            "arn_suffix": "net/web-api-nlb/04dc7d5cfa7910a3",
            "dns_name": "web-api-nlb-04dc7d5cfa7910a3.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:769126752719:loadbalancer/net/web-api-nlb/04dc7d5cfa7910a3",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "web-api-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a323bbf138cdabb3"
              },
              {
                "subnet_id": "subnet-0be766c0021a3b681"
              }
            ],
            "subnets": [
              "subnet-0a323bbf138cdabb3",
              "subnet-0be766c0021a3b681"
            ],
            "tags": {
              "Project": "web-api"
            },
            "tags_all": {
              "Project": "web-api"
            },
            "vpc_id": "vpc-01cad0334bfd1be48",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:769126752719:listener/net/web-api-nlb/04dc7d5cfa7910a3/40df3ca96b32cc0d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:769126752719:targetgroup/tg-20250828184017032100000007/a1674039620623a9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:769126752719:listener/net/web-api-nlb/04dc7d5cfa7910a3/40df3ca96b32cc0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:769126752719:loadbalancer/net/web-api-nlb/04dc7d5cfa7910a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:769126752719:targetgroup/tg-20250828184017032100000007/a1674039620623a9",
            "arn_suffix": "targetgroup/tg-20250828184017032100000007/a1674039620623a9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:769126752719:targetgroup/tg-20250828184017032100000007/a1674039620623a9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:769126752719:loadbalancer/net/web-api-nlb/04dc7d5cfa7910a3"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-20250828184017032100000007",
            "name_prefix": "tg-",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Project": "web-api"
            },
            "tags_all": {
              "Project": "web-api"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:769126752719:targetgroup/tg-20250828184017032100000007/a1674039620623a9-2025082818403789210000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:769126752719:targetgroup/tg-20250828184017032100000007/a1674039620623a9",
            "target_id": "i-055f267cce462ac27"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2",
            "module.ec2.aws_iam_role.ec2",
            "module.ec2.aws_instance.this",
            "module.ec2.aws_security_group.ec2",
            "module.ec2.data.aws_ami.al2023",
            "module.ec2.data.aws_iam_policy_document.assume",
            "module.nlb.aws_lb_target_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:network-acl/acl-0fa516e2c10a93cba",
            "default_network_acl_id": "acl-0fa516e2c10a93cba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fa516e2c10a93cba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "769126752719",
            "subnet_ids": [
              "subnet-015e55f0d84d9075d",
              "subnet-074494a524804cfa8",
              "subnet-0a323bbf138cdabb3",
              "subnet-0be766c0021a3b681"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-default",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-default",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:route-table/rtb-045c6f74a885c22f6",
            "default_route_table_id": "rtb-045c6f74a885c22f6",
            "id": "rtb-045c6f74a885c22f6",
            "owner_id": "769126752719",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-default",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-default",
              "Project": "web-api",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:security-group/sg-0f47df18f987b8106",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f47df18f987b8106",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "769126752719",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-default",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-default",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0504670a1d5a96bed",
            "arn": "arn:aws:ec2:us-east-1:769126752719:elastic-ip/eipalloc-0504670a1d5a96bed",
            "association_id": "eipassoc-015f029428d28e537",
            "domain": "vpc",
            "id": "eipalloc-0504670a1d5a96bed",
            "network_border_group": "us-east-1",
            "network_interface": "eni-089d8f5cd3bf423fd",
            "private_dns": "ip-10-0-101-30.ec2.internal",
            "private_ip": "10.0.101.30",
            "public_dns": "ec2-44-192-206-156.compute-1.amazonaws.com",
            "public_ip": "44.192.206.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:internet-gateway/igw-0ac5de47f5ff24b01",
            "id": "igw-0ac5de47f5ff24b01",
            "owner_id": "769126752719",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0504670a1d5a96bed",
            "association_id": "eipassoc-015f029428d28e537",
            "connectivity_type": "public",
            "id": "nat-0255b9f9e53110638",
            "network_interface_id": "eni-089d8f5cd3bf423fd",
            "private_ip": "10.0.101.30",
            "public_ip": "44.192.206.156",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-074494a524804cfa8",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-075debbd7e9c0f25b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0255b9f9e53110638",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075debbd7e9c0f25b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac5de47f5ff24b01",
            "id": "r-rtb-0f6b2cb99bd629c0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6b2cb99bd629c0c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:route-table/rtb-075debbd7e9c0f25b",
            "id": "rtb-075debbd7e9c0f25b",
            "owner_id": "769126752719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0255b9f9e53110638",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-private",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-private",
              "Project": "web-api",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:route-table/rtb-0f6b2cb99bd629c0c",
            "id": "rtb-0f6b2cb99bd629c0c",
            "owner_id": "769126752719",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac5de47f5ff24b01",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-public",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-public",
              "Project": "web-api",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a123e5fdb669a7f2",
            "route_table_id": "rtb-075debbd7e9c0f25b",
            "subnet_id": "subnet-0a323bbf138cdabb3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b53774e480b238e",
            "route_table_id": "rtb-075debbd7e9c0f25b",
            "subnet_id": "subnet-0be766c0021a3b681"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0240210f9173b469b",
            "route_table_id": "rtb-0f6b2cb99bd629c0c",
            "subnet_id": "subnet-074494a524804cfa8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b14aad731ecad12a",
            "route_table_id": "rtb-0f6b2cb99bd629c0c",
            "subnet_id": "subnet-015e55f0d84d9075d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:subnet/subnet-0a323bbf138cdabb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a323bbf138cdabb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769126752719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-private-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-private-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:subnet/subnet-0be766c0021a3b681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be766c0021a3b681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769126752719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-private-us-east-1b",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-private-us-east-1b",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:subnet/subnet-074494a524804cfa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074494a524804cfa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769126752719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-public-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-public-us-east-1a",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:subnet/subnet-015e55f0d84d9075d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015e55f0d84d9075d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "769126752719",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc-public-us-east-1b",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc-public-us-east-1b",
              "Project": "web-api",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01cad0334bfd1be48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:769126752719:vpc/vpc-01cad0334bfd1be48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa516e2c10a93cba",
            "default_route_table_id": "rtb-045c6f74a885c22f6",
            "default_security_group_id": "sg-0f47df18f987b8106",
            "dhcp_options_id": "dopt-07c9ef6f63bc8d9a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cad0334bfd1be48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045c6f74a885c22f6",
            "owner_id": "769126752719",
            "tags": {
              "Environment": "dev",
              "Name": "web-api-vpc",
              "Project": "web-api",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "web-api-vpc",
              "Project": "web-api",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}